# sample_restserver_fastapi

./: .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  gunicorn.conf.py  gunicorn.logging.conf  pyproject.toml  requirements.txt
backend/: __init__.py  api.py  app.py  dto.py  error.py  handler.py
docs/: Makefile
docs/source/: backend.rst  conf.py  index.rst
docs/source/modules/: backend.rst
icons/: favicon.drawio  favicon.icns
