[tool.poetry]
name = "sample-restserver-fastapi"
version = "0.3.0"  # automatically updated by poetry-dynamic-versioning
description = "A sample REST server using FastAPI"
authors = ["Tetsutaro Maruyama <tetsutaro.maruyama@gmail.com>"]
packages = [{include = "sample_restserver_fastapi"}]

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
black = "^22.12.0"
python-lsp-server = "^1.7.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
sphinx = "^6.1.3"
sphinx-rtd-theme = "1.2.0rc2"
sphinx-pyproject-poetry = {git = "https://github.com/tetutaro/sphinx-pyproject-poetry.git"}

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "{base}"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
files = ["backend/__init__.py"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203"]
max-complexity = 15

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = "-v --cov"

[tool.sphinx-pyproject]
copyright = "2023, Testutaro Maruyama"
extensions = ["sphinx.ext.autodoc", "sphinx.ext.napoleon", "sphinx_rtd_theme"]
templates_path = ["_templates"]
exclude_patterns = []
language = "ja"
html_theme = "sphinx_rtd_theme"
html_static_path = ["_static"]
